# github_activity_tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  NOTICE  README.md  main.py  manage_users.py  migrate_passwords.py  pyproject.toml  repair_jobs.py  requirements-dev.txt  requirements.txt  run_debug.py  run_web_ui.py  run_with_datadog.sh  setup.py
.github/workflows/: tests.yml
github_activity_tracker/: __init__.py  cli.py
github_activity_tracker/api/: __init__.py  github_client.py
github_activity_tracker/report/: __init__.py  generator.py  visualization.py
github_activity_tracker/templates/: report.html
github_activity_tracker/utils/: __init__.py  config.py  email_sender.py  file_utils.py  job_storage.py  jobs_repair.py  logger_utils.py  logging_config.py  werkzeug_logging.py
github_activity_tracker/web/: __init__.py  app.py
github_activity_tracker/web/auth/: __init__.py  auth.py  user_manager.py
github_activity_tracker/web/templates/: base.html  index.html  job_status.html  jobs.html  results.html  thread_monitor.html
github_activity_tracker/web/templates/auth/: add_user.html  admin_users.html  change_password.html  edit_user.html  login.html  profile.html
tests/: __init__.py  conftest.py  test_cli.py  test_github_client.py  test_logger_utils.py  test_package.py  test_report.py  test_utils.py
